# python_development

./: .gitignore
20240219/0/: file  prog.py  prog1.py
20240219/1/: prog.py
20240226/0/: cow_print.py
20240226/1/: prog.py
20240226/2/: prog.py
20240304/0/: prog1.py
20240304/1/: prog.py
20240311/0/: prog.py  prog1.py
20240311/1/: prog.py
20240318/0/: 0001-Change-last-line-of-cal1-example.patch  cal1  cal2  cal2.orig  calnew.patch  client.py  processes  processes.patch  srv.py
20240318/1/: prog.py  prog_client.py  prog_server.py
20240318/1/patchdir/: 0001-Start-writing-client-for-MUD.patch  0002-Delete-debugging-output.patch  0003-Fix-client-with-minor-changes.patch  0004-Start-writing-server-for-MUD.patch  (+2 more)
20240325/0/: client.py  httpsrv.py
20240325/1/: prog_server.py
20240401/0/: .flake8  largestr.py  prog0.py  prog1.py
20240401/1/: prog_client.py  prog_server.py
20240401/2/: prog_client.py  prog_server.py
20240408/0/: API.rst  cal.rst  conf.py  index.rst  restcalend.py  say.py
20240408/1/: .pydocstyle
20240408/2/: .flake8
20240415/0/: Pipfile  prog.pot  prog.py  prog1.py  prog2.py
20240415/1/: Pipfile
20240415/2/: Pipfile
20240422/0/: net_prog.py  prog.py  test_prog.py
20240427/0/: Pipfile  dodo.py
20240427/1/: dodo.py
20240513/0/: MANIFEST.in  Pipfile  dodo.py  pyproject.toml
20240513/1/: MANIFEST.in  Pipfile  dodo.py  pyproject.toml
20240513/1/mood/client/: __init__.py  __main__.py  test_client.py
20240513/1/mood/server/: __init__.py  __main__.py
20240513/1/po/ru_RU.UTF-8/LC_MESSAGES/: mood.po
(+52 files in other folders)
