[build-system]
requires = ['setuptools']
build-backend = "setuptools.build_meta"

[project]
name = "mood"
version = "1.0.0"
dependencies = [
    "python-cowsay",
]
authors = [
    {name = "Roman Danilov", email = "romanosauce.code@gmail.com"},
]
description = "Moo! Monster! Moo! Spooky! Moo-oo-o!"

[tool.setuptools.package-dir]
mood = "mood"

[project.scripts]
client = "mood.client.__main__:run"
server = "mood.server.__main__:run"
